<?xml version="1.0" encoding="utf-8"?>

<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    sothree:umanoPanelHeight="65dp"
    sothree:umanoShadowHeight="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/relLayout1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/white_border"
                android:elevation="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <ImageView
                    android:id="@+id/ic_magnify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_location" />

                <AutoCompleteTextView
                    android:id="@+id/input_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ic_magnify"
                    android:layout_weight="8"
                    android:background="@null"
                    android:ellipsize="end"
                    android:hint="@string/enter_your_destination"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="5dp"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_clear_input"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_clear" />
            </android.support.v7.widget.LinearLayoutCompat>

            <ImageView
                android:id="@+id/ic_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="48dp"
                android:layout_marginEnd="28dp"
                android:background="@drawable/circle_white_border"
                android:src="@drawable/ic_gps"
                android:text="Button" />

        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/car_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="-10dp"
                android:src="@drawable/car_img" />

            <TextView
                android:id="@+id/tv_car_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/car_logo"
                android:text="KA 19 A 5000"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_details"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_car_number"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@id/car_logo"
                android:text="@string/car_model_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_details"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_layout">

            <ImageView
                android:id="@+id/iv_parking"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_location" />

            <TextView
                android:id="@+id/tv_parking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_toRightOf="@id/iv_parking"
                android:text="@string/source_parking_location"
                android:textColor="@color/color_text_label" />

            <TextView
                android:id="@+id/tv_parking_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_parking_label"
                android:layout_marginStart="16dp"
                android:layout_toRightOf="@id/iv_parking"
                android:text="@string/parking_details"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/color_text_details"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <RelativeLayout

                android:id="@+id/layout_inside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_layout"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/iv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_download_speed" />

                <TextView
                    android:id="@+id/tv_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@id/iv_distance"
                    android:text="@string/distance_label"
                    android:textColor="@color/color_text_label" />

                <TextView
                    android:id="@+id/tv_distance_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_distance_label"
                    android:layout_marginStart="16dp"
                    android:layout_toRightOf="@id/iv_distance"
                    android:text="@string/distance_details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/color_text_details"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/pb"
                style="@android:style/Widget.Holo.Light.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_inside"
                android:layout_marginTop="-10dp"
                android:progress="80"
                android:progressBackgroundTint="@color/color_green"
                android:progressTint="@color/color_green" />
        </RelativeLayout>


        <View
            android:id="@+id/divider_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/layout3"
            android:background="@color/color_view" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider_horizontal"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:id="@+id/cancel_trip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_trip_text"
                    android:textColor="@color/color_blue" />
            </LinearLayout>


            <View
                android:id="@+id/divider_vertical"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_view" />

            <LinearLayout
                android:id="@+id/contact_us_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_text"
                    android:textColor="@color/color_blue" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.LinearLayoutCompat>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>



